--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,9 +16,10 @@
 
 	// Use 'postCreateCommand' to run commands after the container is created.
 	// "postCreateCommand": "pip3 install --us er -r requirements.txt",
-
+	//"postCreateCommand": ".devcontainer/postCreateCommand.sh"
 	
-	"postCreateCommand": "pip3 install --user -r requirements.txt"
+	"postCreateCommand": "pip3 install --user -r requirements.txt"	                     
+     
 	// Configure tool-specific properties.
 	// "customizations": {},
 
